# 2D-and-3D-graphics-semestrovaya

./: lab1.cpp  lab2.cpp  lab3.cpp  lab5.cpp  lab6.cpp  lab7.cpp  lab8.cpp  mainr.cpp
lab4/: CMakeLists.txt  lab4.cpp
